--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-flutter.sdk=/Users/mawuli/flutter
-sdk.dir=/Users/mawuli/Library/Android/sdk
+flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\j-mawuli\\AppData\\Local\\Android\\sdk
