--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
   # Functional programming thingies
   dartz: ^0.8.6
   # Remote API
-  connectivity: ^0.4.3+7
+  # connectivity: ^0.4.3+7
+  # Swap the connectivity package for this
+  data_connection_checker: ^0.3.4
   http: ^0.12.0+2
   # Local cache
   shared_preferences: ^0.5.3+4
