--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-flutter.sdk=/Users/mawuli/flutter
-sdk.dir=/Users/mawuli/Library/Android/sdk
+flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\j-mawuli\\AppData\\Local\\Android\\sdk
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
