--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,15 @@ dependencies:
   http: ^0.12.0+2
   # Local cache
   shared_preferences: ^0.5.3+4
+  json_annotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.0
   flutter_launcher_icons: ^0.7.3
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 flutter_icons:
   ios: true
