--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   # BLoc state management
   flutter_bloc: ^0.21.0
   # Value equality
-  equatable: ^0.4.0
+  equatable: 1.0.1
   # Functional programming thingies
   dartz: ^0.8.6
   # Remote API
