--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.0
   flutter_launcher_icons: ^0.7.3
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
+  bloc_test: ^2.2.2
 
 flutter_icons:
   ios: true
